--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-16.04, windows-2016]
+        os: [windows-2016]
         javaToBuild: [jdk8u]
     steps:
     - uses: actions/checkout@v1
